# portfolio_project

./: .env  db.sqlite3  pyproject.toml  requirements.txt
portfolio_project/: settings.py  urls.py
profiles/: admin.py  forms.py  models.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
profiles/static/profiles/css/: styles.css
profiles/static/profiles/js/: scripts.js
profiles/templates/profiles/: base.html  home.html  login.html  profile.html  signup.html
